--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 
 
 
@@ -459,6 +460,7 @@ section.form .container {
 }
 #header5-3 .mbr-section-title {
   color: #1f090c;
+  text-align: left;
 }
 #header5-3 .mbr-section-lead {
   color: #420f14;
@@ -794,6 +796,89 @@ section.form .container {
   color: #1f090c!important;
 }
 #contacts1-l P {
+  color: #fbfafa;
+  text-align: left;
+}
+
+#msg-box3-y .mbr-section-title,
+#msg-box3-y .lead {
+  color: #000;
+}
+#msg-box3-y .mbr-section-title {
+  color: #1f090c;
+  text-align: center;
+}
+#msg-box3-y .lead {
+  color: #420f14;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Lora', serif;
+}
+#msg-box3-y .lead P {
+  font-size: 20px;
+}
+#ext_menu-s .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-s .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-s .navbar-toggler {
+  color: #1f090c;
+}
+#ext_menu-s .close-icon::before,
+#ext_menu-s .close-icon::after {
+  background-color: #1f090c;
+}
+#ext_menu-s .link,
+#ext_menu-s .dropdown-item {
+  color: #1f090c;
+}
+#ext_menu-s .link {
+  font-size: 1rem;
+}
+#ext_menu-s .dropdown-item,
+#ext_menu-s .nav-dropdown-sm .link {
+  font-size: 1.083rem;
+}
+#ext_menu-s .link:hover,
+#ext_menu-s .dropdown-item:hover,
+#ext_menu-s .link:focus,
+#ext_menu-s .dropdown-item:focus {
+  color: #1f090c;
+}
+#ext_menu-s .link[aria-expanded="true"],
+#ext_menu-s .dropdown-menu {
+  background: #e4dede;
+}
+#ext_menu-s .nav-dropdown-sm .link:focus,
+#ext_menu-s .nav-dropdown-sm .link:hover,
+#ext_menu-s .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-s .nav-dropdown-sm .dropdown-item:hover {
+  background: #f4f1f1!important;
+}
+#ext_menu-s .navbar,
+#ext_menu-s .nav-dropdown-sm,
+#ext_menu-s .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-s .nav-dropdown-sm .dropdown-menu {
+  background: #fbfafa;
+}
+#ext_menu-s .bg-color.transparent .link {
+  color: #1f090c;
+  transition: none;
+}
+#ext_menu-s .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-s .bg-color.transparent.opened .link:hover,
+#ext_menu-s .bg-color.transparent.opened .link:focus {
+  color: #1f090c;
+}
+#ext_menu-s .link[aria-expanded="true"],
+#ext_menu-s .dropdown-item[aria-expanded="true"] {
+  color: #1f090c!important;
+}
+#contacts1-t P {
   color: #fbfafa;
   text-align: left;
 }
